# whopper

./: .env.example  Cargo.toml  README.md
.github/: CODEOWNERS
src/: lib.rs  main.rs  vars.rs
src/api/: membership.rs  mod.rs  plan.rs  product.rs
src/commands/: mod.rs
src/commands/auth/: logout.rs  mod.rs
src/commands/auth/login/: browser_auth.rs  mod.rs
src/commands/biz/: init.rs  logout.rs  mod.rs
src/commands/me/: list.rs  mod.rs
src/commands/product/: list.rs  mod.rs
src/commands/whoami/: mod.rs
src/config/: mod.rs
src/util/: mod.rs
src/util/types/: mod.rs
