[package]
name = "whopper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
colored = "2"
chrono = "0.4.24"
anyhow = "1.0"
console = "0.15.5"
dialoguer = "0.10.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["server"] }
webbrowser = "0.8.5"
reqwest = { version = "0.11", features = ["json", "blocking"] }
url = "2.3.1"
dotenv = "0.15.0"
dirs = "4.0.0"
toml = "0.7.1"
tabled = "0.10.0"